Publication V7.0.0 : Ajout des bulles-infos en fonction des domaines

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <p class="italic-text">Robotiquement,<br> L'équipe des Amicales.</p>
     </div>
 
-    <div class="info-bulle version" id="info-bulle-version" data-activation="true">
+    <div class="info-bulle version" id="info-bulle-version" data-activation="false">
         <span class="close-btn" onclick="closeInfoBulle('version')">×</span>
         <h2>ℹ️ Version :</h2>
         <p>Le site a été mis à jour le 21/04/2024.</p><p id="italic-text"> La version est à jour.</p>
